# kernel-from-scratch

./: Cargo.toml  Makefile  README.md  i386-unknown-none.json  i386-unknown-none_macos.json
.cargo/: config.toml
boot/: boot.asm  boot.s  grub.cfg  linker.ls  linker_macos.ls
src/: main.rs
src/gdt/: gdt.rs  gdt_helpers.asm
src/interrupts/: exceptions.asm  idt.rs  io.rs  mod.rs  pic.rs
src/interrupts/handlers/: mod.rs
src/interrupts/handlers/IRQ/: mod.rs  timer.rs
src/interrupts/handlers/irq/: keyboard.rs
src/interrupts/handlers/isr/: breakpoint.rs  double_fault.rs  general_protection_fault.rs  mod.rs  page_fault.rs
src/ps2/: controller.rs  keyboard.rs  mod.rs  mouse.rs
src/vga/: terminal.rs
