[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "kernel"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[unstable]
build-std = ["core", "compiler_builtins"]
build-std-features = ["compiler-builtins-mem"]

[build]
target = "target.json"

[dependencies]
